--- a/.chainlit/config.toml
+++ b/.chainlit/config.toml
@@ -68,7 +68,7 @@ edit_message = true
 # Name of the assistant.
 name = "Assistant"
 
-# default_theme = "light"
+default_theme = "light"
 
 # layout = "wide"
 
